# Test_for_fabrique-

./: README.md  manage.py  pyproject.toml
fabrique_notification_service/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
mailing_list/: admin.py  models.py  serializers.py  signals.py  tasks.py  views.py
mailing_list/migrations/: 0001_initial.py  0002_rename_maillist_id_message_mail_list_id_and_more.py
